--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["react", "es2015"]
+    "presets": ["react", ["es2015", { "modules": false }]],
+    "plugins": [ "react-hot-loader/babel" ]
 }
