--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open"
+    "start1": "webpack-dev-server --open",
+    "start2": "node server.js"
   },
   "keywords": [
     "webpack",
@@ -18,7 +19,6 @@
     "pubsub-js": "^1.5.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.2"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
+    "react-hot-loader": "^3.0.0-beta.7",
     "sass": "^1.0.0-beta.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
