--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pubsub-js": "^1.5.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.2"
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
